--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,65 +1,102 @@
 body {
-    background-color: #E7F6F2;
-    margin: 0;
+	background-color: #e7f6f2;
+	margin: 0;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 .header {
-    background-color: #395B64;
-    border-bottom: 2px solid #2c3333;
-    text-align: center;
-    color: #E7F6F2;
+	background-color: #395b64;
+	border-bottom: 2px solid #2c3333;
+	text-align: center;
+	color: #e7f6f2;
 }
 
 .header_h1 {
-    font-family: 'Roboto Mono', monospace;
-    font-size: 2em;
-    margin: 10px auto 25px;
+	font-family: "Roboto Mono", monospace;
+	font-size: 1.8em;
+	margin: 10px auto 25px;
 }
 
 .header_logo {
-    width: 100%;
-    height: 350px;
+	width: 50%;
+	height: 250px;
 }
 
 .main {
-    flex: 1;
+	flex: 1;
 }
 
-.arrow_left, .arrow_right {
-    max-width: 124px;
-    max-height: 125px;
+.flex_container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.buttons {
-    position: relative;
-    left: 40%;
-    top: 2rem;
+.btn {
+	background: hsl(193, 27%, 31%);
+	background-image: -webkit-linear-gradient(top, hsl(193, 27%, 31%), hsl(182, 26%, 72%));
+	background-image: -moz-linear-gradient(top, hsl(193, 27%, 31%), hsl(182, 26%, 72%));
+	background-image: -ms-linear-gradient(top, hsl(193, 27%, 31%), hsl(182, 26%, 72%));
+	background-image: -o-linear-gradient(top, hsl(193, 27%, 31%), hsl(182, 26%, 72%));
+	background-image: linear-gradient(to bottom, hsl(193, 27%, 31%), hsl(182, 26%, 72%));
+	-webkit-border-radius: 60;
+	-moz-border-radius: 60;
+	border-radius: 60px;
+	font-family: "Roboto Mono" monospace;
+	font-weight: 700;
+	color: #e7f6f2;
+	font-size: 45px;
+	padding: 25px 20px 25px 20px;
+	border: solid #2c3333 3px;
+	text-decoration: none;
+	margin-top: 25px;
+}
+
+.btn:hover {
+	background: hsl(193, 37%, 45%);
+	background-image: -webkit-linear-gradient(top, hsl(193, 37%, 46%), hsl(182, 36%, 87%));
+	background-image: -moz-linear-gradient(top, hsl(193, 37%, 46%), hsl(182, 36%, 87%));
+	background-image: -ms-linear-gradient(top, hsl(193, 37%, 46%), hsl(182, 36%, 87%));
+	background-image: -o-linear-gradient(top, hsl(193, 37%, 46%), hsl(182, 36%, 87%));
+	background-image: linear-gradient(to bottom, hsl(193, 37%, 46%), hsl(182, 36%, 87%));
+	text-decoration: none;
 }
 
 .quote_box {
-    width: 50%;
-    height: 300px;
-    border: 2px solid #2c3333;
-    margin: 3rem auto;
+	width: 50%;
+	height: 300px;
+	border: 2px solid #2c3333;
+	margin: 25px auto;
+    overflow: scroll;
+}
+
+.quote_text {
+    font-family: 'Spectral', serif;
+    font-weight: 500;
+    font-size: 1.8em;
+    color: #2c3333;
+}
+
+.author {
+    font-weight: 700;
 }
 
 #quote_copy {
-    position: relative;
-    left: 70.4%;
-    bottom: 3.5em;
+	position: relative;
+	left: 70.5%;
+	bottom: 23px;
 }
 
 .footer {
-    border-top: 1px solid #2c3333;
+	border-top: 1px solid #2c3333;
 }
 
 .footer_text {
-    text-align: center;
-    margin: 5px auto;
+	text-align: center;
+	margin: 5px auto;
 }
